[package]
name = "gpio2key"
version = "0.1.0"
edition = "2024"
description = "A Raspberry Pi utility to map GPIO events to keyboard events"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = [
  "command-line-utilities",
  "embedded",
  "game-development",
  "hardware-support",
]
keywords = ["evdev", "gpio", "keyboard", "linux", "raspberry"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/gpio2key"

[dependencies]
anyhow = "1"
argh = "0.1"
ctrlc = "3"
env_logger = "0.11"
evdev = "0.13"
gpio-cdev = "0.6"
libc = "0.2"
log = "0.4"
rppal = "0.22"
serde = "1"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
